--- a/proyectos.html
+++ b/proyectos.html
@@ -37,8 +37,11 @@
                 <div class="img">
                 <img src="./asssets/bellmouth.png" alt="Bellmouth">
                 </div>
-                <h2><span>Diseño de boca de campana para medida de flujo de aire en un turbojet</span></h2>
-                <p></p>
+                <h2><span>Diseño de entrada de aire para un turbojet</span></h2>
+                <p>En este proyecto se propone el diseño de una entrada de aire y el sistema de medida de flujo de aire correspondiente para un turbojet a escala.
+                    Se utilizan herramientas como OpenFoam, una libreria en C++ para realizar las simulaciones y ParaView para el posprocesado. 
+                </p>
+                <a href="https://github.com/alvaro-qg/inlet-CFD.git">Ver proyecto</a>
             </article>
 
             <article class="article-proyect">
@@ -46,7 +49,9 @@
                     <img src="./asssets/satellite.png" alt="satellite">
                 </div>
                 <h2><span>Adquisición de señales y front end GNSS</span></h2>
-                <p></p>
+                <p>
+                    Sesiones de laboratorio realizadas para adquirir, simular y analizar señales GPS L1 CA y satélites de la constelación Galileo utilizando Matlab
+                </p>
             </article>
 
            <article class="article-proyect">
@@ -54,7 +59,9 @@
                 <img src="./asssets/bench.png" alt="bench">
                 </div>
                 <h2><span>Banca de pruebas de motor</span></h2>
-                <p></p>
+                <p>
+                    Diseño de una banca de pruebas para un cohete sonda bajo requerimientos especificos utilizando ANSA, Nastran y META para el análisis estructural FEA
+                </p>
             </article>
 
             <article class="article-proyect">
@@ -62,7 +69,9 @@
                 <img src="./asssets/wing.png" alt="wing">
                 </div>
                 <h2><span>Modelo estructural de ala</span></h2>
-                <p></p>
+                <p>
+                    Se considera un perfil alar NACA0018 como prototipo bajo cargas aerodinámicas para analizar su comportamiento estructural utilizando Matlab
+                </p>
             </article>
 
             <article class="article-proyect">
@@ -70,7 +79,9 @@
                 <img src="./asssets/mecanizado.png" alt="mecanizado">
                 </div>
                 <h2><span>Mecanizado de pieza por CAM</span></h2>
-                <p></p>
+                <p>
+                    Mecanizado de pieza tornada por el software CAM, HyperMill utilizando un torno CNC.
+                </p>
             </article>
 
             <article class="article-proyect">
@@ -78,7 +89,9 @@
                 <img src="./asssets/app-tiempo.png" alt="App del tiempo">
                 </div>
                 <h2><span>Solver</span></h2>
-                <p></p>
+                <p>
+                    
+                </p>
             </article>
 
             <article class="article-proyect">
